[package]
name = "microdelay"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
	"xtask",
]

[lib]
crate-type = ["cdylib"] # Создает динамическую библиотеку (DLL/SO/DYLIB)

[profile.release]
lto = true

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", features = ["vst3"] }
nih_plug_derive = { git = "https://github.com/robbert-vdh/nih-plug" } 
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }